Updated changes for the add phantom and add points
